# FAIVOR-ML-Validator

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  README.md  error-handling-improvements.md  pyproject.toml
.github/workflows/: build.yml  publish-docker.yml
examples/: run_model.ipynb
src/faivor/: api_controller.py  calculate_metrics.py  docker.py  metrics_api.py  model_metadata.py  model_validator.py  parse_data.py  run_docker.py  utils.py
src/faivor/metrics/: config_loader.py  metric.py  test.py
src/faivor/metrics/classification/: __init__.py  classification_metrics.py  classification_metrics.yaml  explainability.py  fairness.py  performance.py
src/faivor/metrics/regression/: __init__.py  explainability.py  fairness.py  performance.py  regression_metrics.py  regression_metrics.yaml
tests/: test_api_controller.py  test_metrics_api.py  test_model_execution.py  test_model_metadata.py
tests/data/: model.json
tests/data/models/pilot-model_1/: column_metadata.json  data.csv  metadata.json
tests/data/models/pilot-model_1/changed_data/: column_metadata.json  data.csv
tests/data/models/pilot-model_2/: column_metadata.json  data.csv  metadata.json
tests/data/pilot-model_1/: data.csv
tests/data/pilot-model_2/: data.csv
tests/faivor/metrics/classification/: test_explainability.py  test_fairness.py  test_performance.py
tests/faivor/metrics/regression/: test_explainability.py  test_fairness.py  test_performance.py
tests/metrics/classification/: test_performance.py
tests/metrics/regression/: test_explainability.py  test_performance.py
