[tool.poetry]
name = "FAIVOR"
version = "0.1.0"
description = "FAIRmodels-validator"
authors = []
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "faivor", from = "src" }]
homepage = "https://github.com/MaastrichtU-BISS/FAIRmodels-validator"
repository = "https://github.com/MaastrichtU-BISS/FAIRmodels-validator"
documentation = "https://github.com/MaastrichtU-BISS/FAIRmodels-validator"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
fastapi = "^0.115.2"
scikit-learn = "^1.5.2"
apscheduler = "^3.10"
uvicorn = "^0.31.1"
pytype = "^2024.10.11"
httpx = "^0.28.1"
docker = "^7.1.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-datadir = "^1.3.1"
pytest-asyncio = "^0.24.0"

[tool.poetry.scripts]
run-api = "uvicorn src.faivor.api_controller:app --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
